--- a/demo-main/pom.xml
+++ b/demo-main/pom.xml
@@ -117,6 +117,7 @@
                                             <exclude>META-INF/*.SF</exclude>
                                             <exclude>META-INF/*.DSA</exclude>
                                             <exclude>META-INF/*.RSA</exclude>
+                                            <exclude>javax/xml/**</exclude>
                                         </excludes>
                                     </filter>
                                 </filters>
