--- a/demo-main/pom.xml
+++ b/demo-main/pom.xml
@@ -40,6 +40,13 @@
                 <artifactId>openejb-core</artifactId>
                 <version>${openejb.version}</version>
                 <scope>compile</scope>
+                <exclusions>
+                    <exclusion>
+                        <!-- exclude junit 3.8.1 -->
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.tomee</groupId>
